--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "dev": "ts-node-dev src/server.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "prisma": "^4.11.0"
+    "prisma": "^4.11.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   }
 }
